[34] fix: move silver pied alert below birds to pervent overlap on small screens

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,10 @@ h3 {
     border: 1px solid #ddd; 
 }
 
+.multiWrapper {
+    position: relative;
+}
+
 .imageWrapper { 
     position: relative; 
     height: 300px; 
